Refactor QuestItemFetcher, remove commons-io dependency